Bug 345186 - Box widget property dialog shows empty general page
Summary: Box widget property dialog shows empty general page
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.5
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on: 346291
Blocks:
  Show dependency treegraph
 
Reported: 2015-03-15 18:00 UTC by Ralf Habacker
Modified: 2015-04-17 21:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.16.1 (KDE Applications 15.04.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-03-15 18:00:37 UTC
Double clicking on a box widget in a class diagram shows a dialog with 3 pages. The first page named general does not have any content. 

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add a box widget to a class diagram
3. double click on the border of the box widget

Actual Results:  
The general page of the displayed dialog does not have any content

Expected Results:  
The first page should show useful information or should be removed

In version 4.10.5 there is no property dialog shown. Because box widgets only supports line color settings a property dialog should only allow to change the line color.
Comment 1 Ralf Habacker 2015-04-17 06:05:42 UTC
Pressing okay after dialog open let umbrello crash.
Comment 2 Ralf Habacker 2015-04-17 06:23:46 UTC
(In reply to Ralf Habacker from comment #1)
> Pressing okay after dialog open let umbrello crash.

the crash is handled with bug 346291
Comment 3 Ralf Habacker 2015-04-17 07:18:11 UTC
Git commit 327d20e8c9b3c1d3db0870ed08f5aeb82f6d55c2 by Ralf Habacker.
Committed on 17/04/2015 at 07:16.
Pushed by habacker into branch 'Applications/15.04'.

Fix of 'Box widget property dialog shows empty general page'.

Keep properties dialog in sync with related context menu entry,
which shows the color selection dialog.

FIXED-IN: 2.16.1 (KDE 15.04.1)

M  +20   -0    umbrello/widgets/boxwidget.cpp
M  +1    -0    umbrello/widgets/boxwidget.h

http://commits.kde.org/umbrello/327d20e8c9b3c1d3db0870ed08f5aeb82f6d55c2