Fix of 'Box widget property dialog shows empty general page'.

Keep properties dialog in sync with related context menu entry,
which shows the color selection dialog.

FIXED-IN: 2.16.1 (KDE 15.04.1)
BUG:345186