umbrello/widgets/boxwidget.h
@@ -33,6 +33,7 @@ public:
     virtual void paint(QPainter *painter, const QStyleOptionGraphicsItem *option, QWidget *widget = 0);
     virtual void saveToXMI(QDomDocument& qDoc, QDomElement& qElement);
 
+    virtual void showPropertiesDialog();
 };
 
 #endif
